Fix spacing in recipes.css

--- a/recipes/recipes.css
+++ b/recipes/recipes.css
@@ -62,6 +62,7 @@ img {
   border: 2px solid black;
   border-radius: 20px;
   padding: 30px;
+  margin: 15px;
 }
 
 .link {
